--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,9 @@
-<app-default-login-layout></app-default-login-layout>
+<app-default-login-layout
+  title="Login into your account"
+  primaryBtnText="Login Now"
+  secondaryBtnText="Signup Now"
+>
+  <form [formGroup]="loginForm">
+    
+  </form>
+</app-default-login-layout>
