--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,6 +1,6 @@
 <main>
   <section class="form-section">
-    <img src="/assets/svg/logo.svg"/>
+    <h1 class="main-title">{{ mainTitle }}</h1>
     <h2>{{ title }}</h2>
     <ng-content></ng-content>
     <div class="btn-wrapper">
@@ -13,14 +13,14 @@
       </button>
       <div class="divider">
         <div></div>
-        <span>or</span>
+        <span>ou</span>
         <div></div>
       </div>
       <button class="btn-secondary" (click)="navigate()">{{ secondaryBtnText }}</button>
     </div>
   </section>
   <section class="main-section">
-    <h1>You Should, MoveIt!</h1>
-    <img src="/assets/svg/main-illustration.svg"/>
+    <h1>Organize suas despesas!</h1>
+    <img src="/assets/svg/main-image2.png"/>
   </section>
 </main>
