--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,7 +1,8 @@
 <app-default-login-layout
-  title="Sign in and start today!"
-  primaryBtnText="Signup Now"
-  secondaryBtnText="Login Now"
+  mainTitle="Expense Manager"
+  title="Inscreva-se e comece hoje!"
+  primaryBtnText="Inscreva-se agora"
+  secondaryBtnText="Entrar agora"
   (submit)="submit()"
   (navigate)="navigate()"
   [disablePrimaryBtn]="!signupForm.valid"
@@ -11,7 +12,7 @@
       formControlName="name"
       inputName="nema"
       type="text"
-      label="Your Name"
+      label="Nome"
     >
       <img src="/assets/svg/email-icon.svg">
     </app-primary-input>
@@ -28,7 +29,7 @@
       formControlName="password"
       inputName="password"
       type="password"
-      label="Your Password"
+      label="Senha"
     >
       <img src="/assets/svg/password-icon.svg">
     </app-primary-input>
@@ -36,7 +37,7 @@
       formControlName="passwordConfirm"
       inputName="passwordConfirm"
       type="password"
-      label="Confirm Your Password"
+      label="Confirme sua senha"
     >
       <img src="/assets/svg/password-icon.svg">
     </app-primary-input>
