--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -9,6 +9,10 @@
   background-color: white;
   cursor: pointer;
 
+  @media (max-width: 820px) {
+    padding: 10px;
+  }
+
   .card-content {
     display: flex;
     justify-content: space-between;
