--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,8 +3,12 @@
     <li class="menu-item" *ngFor="let route of routes">
       <a [routerLink]="route.path" routerLinkActive="active" class="menu-link">
         <mat-icon class="menu-icon">{{ route.icon }}</mat-icon>
-        <!-- <span class="menu-text">{{ route.name }}</span> -->
       </a>
+    </li>
+    <li class="menu-item logout-item">
+      <button mat-icon-button (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+      </button>
     </li>
   </ul>
 </nav>
