--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -12,6 +12,20 @@
   flex-direction: column;
   padding: 20px;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+
+  @media (max-width: 820px) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: auto;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1px 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .sidebar-menu {
@@ -21,6 +35,13 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  flex-grow: 1;
+
+  @media (max-width: 820px) {
+    flex-direction: row;
+    justify-content: space-around;
+    width: auto;
+  }
 }
 
 .menu-item {
@@ -28,6 +49,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 820px) {
+    margin-bottom: 0;
+  }
+}
+
+.menu-item img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
 }
 
 .menu-item a {
@@ -44,14 +75,41 @@
   }
 }
 
-.menu-item img {
-  width: 24px;
-  height: 24px;
-  margin-right: 10px;
-}
-
 .menu-item a.active {
   font-weight: bold;
-  border-left: 4px solid #3b82f6;
-  padding-left: 10px;
+  border: 4px solid #3b82f6;
+  border-radius: 5px;
+
+  @media (max-width: 820px) {
+    border-bottom: 2px solid #3b82f6;
+    padding-inline: 5px;
+  }
+}
+
+.logout-item {
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0;
+
+  @media (max-width: 820px) {
+    margin-left: auto;
+  }
+}
+
+.logout-item button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.logout-item button mat-icon {
+  font-size: 24px;
+  color: #fff;
 }
