--- a/src/app/components/transaction-modal/transaction-modal.component.scss
+++ b/src/app/components/transaction-modal/transaction-modal.component.scss
@@ -16,6 +16,10 @@
   border-radius: 8px;
   width: 400px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  @media (max-width: 820px) {
+    width: 350px;
+  }
 }
 
 h3 {
