--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -53,6 +53,11 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
+
+        @media (max-width: 820px) {
+          width: 30px;
+          height: 30px;
+        }
       }
 
       .red {
@@ -63,6 +68,11 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
+
+        @media (max-width: 820px) {
+          width: 30px;
+          height: 30px;
+        }
       }
 
       .blue {
@@ -73,6 +83,11 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
+
+        @media (max-width: 820px) {
+          width: 30px;
+          height: 30px;
+        }
       }
 
       .purple {
@@ -83,6 +98,11 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
+
+        @media (max-width: 820px) {
+          width: 30px;
+          height: 30px;
+        }
       }
     }
   }
